rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax03/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		static boolean equals(Object o) { return true; } 
	}
}